--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@raycast/api": "^1.26.1",
     "algoliasearch": "^5.1.3",
+    "node-fetch": "^3.3.2",
     "prettier": "^2.5.0"
   },
   "devDependencies": {
